Milestone Project 2. Updated. Budget attribute added.

--- a/08-Milestone Project - 2/01-Milestone Project 2 - Assignment.ipynb
+++ b/08-Milestone Project - 2/01-Milestone Project 2 - Assignment.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,50 +111,90 @@
     "\n",
     "class Human(Player):\n",
     "    \n",
-    "    def __init__(self, name, bet):\n",
+    "    def __init__(self, name, budget, bet):\n",
     "        Player.__init__(self, name)\n",
+    "        self.budget = budget\n",
     "        self.bet = bet\n",
+    "        if self.bet > self.budget:\n",
+    "            print(f\"You don't have enough money. Budget available: {self.budget}.\")\n",
+    "        else:\n",
+    "            self.budget -= self.bet\n",
+    "            print(f\"You bet is {self.bet}$. Your budget is {self.budget}$.\")\n",
+    "        \n",
+    "    def apply_bet(self, new_bet):\n",
+    "        if new_bet > self.budget:\n",
+    "            print(f\"You don't have enough money. Budget available: {self.budget}.\")\n",
+    "            return False\n",
+    "        else:\n",
+    "            self.bet = new_bet\n",
+    "            self.budget -= self.bet\n",
+    "            print(f\"You bet is {self.bet}$. Your budget is {self.budget}$.\")\n",
+    "            return True\n",
+    "        \n",
     "        print(f\"New player {self.name} starts the game with a bet {self.bet}$.\")\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New player Peter starts the game with a bet 100$.\n",
+      "You bet is 50$. Your budget is 50$.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dealer = Player('Dealer')\n",
+    "player = Human(name='Peter', budget=100, bet=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How much do you want to bet? 899\n",
+      "You don't have enough money. Budget available: 250.\n",
+      "How much do you want to bet? 50\n",
+      "You bet is 50$. Your budget is 200$.\n",
       "The game begins!\n",
       "\n",
-      "Dealer's cards: (7, 'diamonds'), ('value', 'suit')\n",
-      "Player's cards: [(10, 'hearts'), ('ace', 'clubs')]\n",
-      "Peter has an ace, type 1 or 11: 11\n",
-      "Your current some is: 21\n",
+      "Dealer's cards: ('queen', 'spades'), ('value', 'suit')\n",
+      "Player's cards: [('queen', 'hearts'), ('queen', 'clubs')]\n",
+      "Your current some is: 20\n",
       "\n",
       "Number of cards in the deck: 48\n",
       "---------------------------------------------\n",
-      "Peter has an ace, type 1 or 11: 11\n",
       "Do you want to draw a new card (type 'y' or 'n')? n\n",
-      "Player's cards: [(10, 'hearts'), ('ace', 'clubs')]\n",
+      "Player's cards: [('queen', 'hearts'), ('queen', 'clubs')]\n",
       "\n",
-      "Your current some is: 21\n",
+      "Your current some is: 20\n",
       "\n",
       "Number of cards in the deck: 48\n",
       "---------------------------------------------\n",
       "Passing to a dealer's turn...\n",
       "\n",
-      "Dealer draws.\n",
-      "Dealer's cards: [(7, 'diamonds'), ('queen', 'diamonds'), (7, 'hearts')]\n",
+      "Dealer finishes his turn.\n",
       "\n",
-      "His current some is: 24\n",
+      "Dealer's cards: [('queen', 'spades'), (8, 'diamonds')]\n",
       "\n",
-      "Number of cards in the deck: 47\n",
+      "His current some is: 18\n",
+      "\n",
+      "Number of cards in the deck: 48\n",
       "---------------------------------------------\n",
-      "His sum of cards have exceeded 21. Bust! Player won. He doubles his bet.\n",
+      "Let's check the result...\n",
+      "\n",
+      "Player won. You doubled your bet.\n",
+      "Player's sum 20 is closer to 21 than dealer's sum 18.\n",
       "Do you want to replay ('y' or 'n')? n\n",
       "Thank you for the game! Bye!\n"
      ]
@@ -174,9 +214,14 @@
     "    \n",
     "    deck = Deck()\n",
     "    deck.shuffle()\n",
-    "\n",
-    "    dealer = Player('Dealer')\n",
-    "    player = Human('Peter', 100)\n",
+    "    \n",
+    "    dealer.cards = []\n",
+    "    player.cards = []\n",
+    "    if player.bet == 0:\n",
+    "        while True:\n",
+    "            desired_bet = int(input(\"How much do you want to bet? \"))\n",
+    "            if player.apply_bet(desired_bet):\n",
+    "                break\n",
     "\n",
     "    for i in range(2):\n",
     "        # dealer draws two cards\n",
@@ -291,10 +336,13 @@
     "            \n",
     "        elif dealer_sum > 21:\n",
     "            print(f\"His sum of cards have exceeded 21. Bust! Player won. He doubles his bet.\")\n",
-    "            player.bet *= 2\n",
+    "            player.budget += player.bet * 2\n",
+    "            player.bet = 0\n",
     "        \n",
     "        elif player_sum == dealer_sum:\n",
     "            print(f\"Nobody won. Dealer's sum {dealer_sum}. Player's sum {player_sum}.\")\n",
+    "            player.budget += player.bet\n",
+    "            player.bet = 0\n",
     "            \n",
     "        elif (21-dealer_sum) < (21-player_sum):\n",
     "            print(f\"Dealer won. You lost your bet.\\nDealer's sum {dealer_sum} is closer to 21 than player's sum {player_sum}.\")\n",
@@ -302,7 +350,8 @@
     "            \n",
     "        else:\n",
     "            print(f\"Player won. You doubled your bet.\\nPlayer's sum {player_sum} is closer to 21 than dealer's sum {dealer_sum}.\")\n",
-    "            player.bet *= 2  \n",
+    "            player.budget += player.bet * 2\n",
+    "            player.bet = 0 \n",
     "\n",
     "    game_on = replay()\n",
     "    if game_on:\n",
@@ -315,22 +364,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "200"
+       "300"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "player.bet"
+    "player.budget"
    ]
   },
   {
